--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,44 +1,67 @@
+
+
 .container {
-  margin: 0;
-  padding: 0;
   display: flex;
-  height: 100%;
-  width: 100%;
   flex-direction: column;
-  place-items: center;
-  place-content: center;
-}
-.container-row {
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
+  place-items: center;
+  place-content: center;
+}
+.row-container {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
   display: flex;
   place-items: center;
   place-content: center;
 }
-.row {
+
+#menu {
   display: flex;
-  flex-direction: row;
-}
-
-.col {  display: flex;
   flex-direction: column;
+  width: 10%;
+  height: 100%;
+  align-items: center;
+  align-content: center;
+  border: 4px solid red;
+  padding: 1px;
 }
-.btn, 
 
- {
+#sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  border: 4px solid black;
+  margin-top: 5%;
+  width: 100%;
+  height: 40%;
+}
+
+.nav-list {
+  border: 4px solid black;
+  padding: 5px;
+}
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 4px solid black;
+  width: 100%;
+}
+.btn {
   border: 1px solid #333;
   box-shadow: 8px 8px 5px #444;
   padding: 8px 12px;
   background-image: linear-gradient(18-deg, #fff, #ddd, 40% #ccc);
- }
-.btn {
   border-radius: .4rem;
   width: 100px;
   height: 50px;
 }
-
 .list {
   padding: 0;
   list-style-type: none;
